--- a/t5-GBALK/indexBackup.html
+++ b/t5-GBALK/indexBackup.html
@@ -47,23 +47,23 @@
 
         <div class="row">
           <div class="card">
-            <h2>Defensive Profile</h2>
+            <h2>title 1</h2>
             <img src="img/1911" class="img-responsive">
             <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-            <h2>Sky Spotters</h2>
+            <h2>title 2</h2>
             <img src="img/1910" class="img-responsive">
             <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-            <h2>Digital Resource Lifespan</h2>
+            <h2>title 3</h2>
             <img src="img/1909" class="img-responsive">
             <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
 
           <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-            <h2>Credit Card Rewards</h2>
+            <h2>title 4</h2>
             <img src="img/1908" class="img-responsive">
             <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
