Add data publicacao, falta permissao

--- a/t5-GBALK/index.html
+++ b/t5-GBALK/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 py-4">
-            <h4 class="text-white">T5 - PSO</h4>
+            <h3 class="text-white">T5 - PSO</h3>
             <p class="text-muted">O script deve conter:<br/>
                Usar o pacote Python requests nas requisições HTTP.<br/>
                Usar a API REST do xkcd em https://xkcd.com/json.html e baixar as últimas 4 comics do site.<br/>
@@ -49,23 +49,22 @@
           <div class="card">
             <h2>Defensive Profile</h2>
             <img src="img/1911" class="img-responsive">
-            <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
+            <h4> Data da publicacao: 3-11-2017</h4>
           <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
             <h2>Sky Spotters</h2>
             <img src="img/1910" class="img-responsive">
-            <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h4> Data da publicacao: 1-11-2017</h4>
           </div>
           <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
             <h2>Digital Resource Lifespan</h2>
             <img src="img/1909" class="img-responsive">
-            <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h4> Data da publicacao: 30-10-2017</h4>
           </div>
 
           <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
             <h2>Credit Card Rewards</h2>
             <img src="img/1908" class="img-responsive">
-            <p id="date">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h4> Data da publicacao: 27-10-2017</h4>
           </div>
             
         </div>
